Fix overflowing sidebar and header bug

--- a/program/styles.css
+++ b/program/styles.css
@@ -16,12 +16,13 @@
 }
 html, body {
     height:100%;
+    background:var(--main);
 }
 .container {
     min-height:100%;
     display:grid;
     grid-template-columns:minmax(300px, 1fr) 5fr;
-    grid-template-rows:1fr 8fr;
+    grid-template-rows:100px 1fr;
 }
 
 /* Grid placement */
@@ -32,6 +33,7 @@ html, body {
 .sidebar {
     grid-column:1;
     grid-row:2;
+    max-height:100vh;
 }
 .main {
     grid-column:2;
@@ -46,6 +48,8 @@ html, body {
     display:flex;
     justify-content:space-between;
     align-items:center;
+    max-height:10vh;
+    overflow-y:hidden;
 }
 .sidebar {
     display:grid;
@@ -96,6 +100,7 @@ button.add {
     border-radius:15px;
     box-shadow:10px 10px 0 0 rgba(0, 0, 0, 0.24);
     color:var(--header);
+    min-height:300px;
 }
 .info {
     height:max(fit-content, 50%);
@@ -105,13 +110,17 @@ button.add {
     justify-content:stretch;
     gap:10%;
 }
-.read, .remove {
+.read, .remove, .unread {
     display:block;
-    width:clamp(150px, 60%, 250px);
-    padding:1.1em;
+    width:60%;
+    padding:1.1rem;
     border-radius:25px;
     border:none;
     font-size:1.1rem;
+    text-align:center;
+}
+.unread {
+    background:var(--unread);
 }
 .read {
     background:var(--read);
